# aoc-2022

./: Cargo.toml  README.md
src/: main.rs
src/day_01/: mod.rs
src/day_02/: mod.rs
src/day_03/: mod.rs
src/day_04/: mod.rs
src/day_05/: mod.rs
src/day_06/: mod.rs
src/day_07/: mod.rs
src/day_08/: mod.rs
