[package]
name = "aoc-2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version="3.2.22", features=["derive"] }
reqwest = { version = "0.11.10",  features = ["json"] }
serde_json = "1.0.68"
tokio = { version = "1.0", features = ["full"] }

